--- a/UIExension/DayViewUIExtension/DayViewUIExtensionCore/DayViewUIExtensionCore.csproj
+++ b/UIExension/DayViewUIExtension/DayViewUIExtensionCore/DayViewUIExtensionCore.csproj
@@ -60,17 +60,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="PluginHelpers">
-      <HintPath>..\..\..\$(Configuration)\PluginHelpers.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\PluginHelpers\PluginHelpers.vcxproj">
+      <Project>{85DB2CAF-CC78-4CA9-B948-EC2AC25F13E8}</Project>
+      <Name>PluginHelpers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DayView\DayView.csproj">
       <Project>{D17A4D6A-4CAA-4470-8A19-F42463C021FD}</Project>
       <Name>DayView</Name>
