Refactor attribute combo into separate class

--- a/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
+++ b/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
@@ -53,6 +53,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="AttributeComboBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WordCloudUIExtensionCore.cs">
       <SubType>Component</SubType>
     </Compile>
