--- a/ToDoList/ToDoList.vcxproj
+++ b/ToDoList/ToDoList.vcxproj
@@ -546,6 +546,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="ToDoCtrlDataUtils.cpp" />
     <ClCompile Include="ToDoCtrlFind.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -708,6 +709,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="todocommentsctrl.h" />
     <ClInclude Include="ToDoCtrl.h" />
     <ClInclude Include="ToDoCtrlData.h" />
+    <ClInclude Include="ToDoCtrlDataUtils.h" />
     <ClInclude Include="ToDoCtrlFind.h" />
     <ClInclude Include="ToDoCtrlMgr.h" />
     <ClInclude Include="ToDoCtrlReminders.h" />
