Add framework for saving active view to bitmap

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -2955,6 +2955,8 @@ BEGIN
                                                 ID_VIEW_TOGGLETREEANDLIST
         MENUITEM "Next Task Vie&w",             ID_VIEW_CYCLETASKVIEWS
         MENUITEM SEPARATOR
+        MENUITEM "Save Task View to &Image...", ID_VIEW_SAVETOIMAGE
+        MENUITEM SEPARATOR
         MENUITEM "To&ggle between Tasks and Comments", 
                                                 ID_VIEW_TOGGLETASKSANDCOMMENTS
 
