--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -466,6 +466,9 @@
     <ClCompile Include="XslFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CopyWndContents.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -967,6 +970,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="XslFile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CopyWndContents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
