--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -3085,6 +3085,7 @@ BEGIN
         MENUITEM "Fil&e Link",                  ID_SORT_BYFILEREF
         MENUITEM "&Flag",                       ID_SORT_BYFLAG
         MENUITEM "Icon",                        ID_SORT_BYICON
+        MENUITEM "&Lock",                       ID_SORTBY_LOCK
         MENUITEM "&Modified Date",              ID_SORT_BYMODIFYDATE
         MENUITEM "&Path",                       ID_SORT_BYPATH
         MENUITEM "Percent Co&mplete",           ID_SORT_BYPERCENT
@@ -3429,6 +3430,8 @@ BEGIN
                                                     ID_EDIT_CLEARFOCUSEDFIELD
 
         END
+        MENUITEM SEPARATOR
+        MENUITEM "&Lock Task Attributes",       ID_EDIT_LOCKTASK
         MENUITEM SEPARATOR
         MENUITEM "Set &Reminder...",            ID_EDIT_SETREMINDER
         MENUITEM "&Clear Reminder",             ID_EDIT_CLEARREMINDER
@@ -5027,6 +5030,14 @@ BEGIN
     IDS_RC_RELEASE          "Release Candidate"
     IDS_SETUP_TITLE         "ToDoList Setup"
     IDS_CAD_FILELINK        "File Link"
+END
+
+STRINGTABLE
+BEGIN
+    IDS_TDLBC_LOCK          "Lock"
+    IDS_TDCTIP_LOCK         "Locked"
+    IDS_UNLOCKED            "Unlocked"
+    IDS_LOCKED              "Locked"
 END
 
 #endif    // English (Australia) resources
