Give clipboard field and horizontal scrollbar

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1184,7 +1184,7 @@ BEGIN
     CONTROL         "&Windows Clipboard",IDC_FROMCLIPBOARD,"Button",
                     BS_AUTORADIOBUTTON | BS_TOP | BS_MULTILINE,15,61,45,44
     EDITTEXT        IDC_FROMCLIPBOARDTEXT,62,61,165,62,ES_MULTILINE | 
-                    ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
+                    ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
     GROUPBOX        "Import To",IDC_TOBORDER,7,155,231,59
     CONTROL         "&New tasklist",IDC_TONEWTASKLIST,"Button",
                     BS_AUTORADIOBUTTON | WS_GROUP,15,169,213,10
