Add UI scaffolding for merging imported tasks

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1168,33 +1168,43 @@ BEGIN
                     WS_DISABLED,7,28,370,157
 END
 
-IDD_IMPORT_DIALOG DIALOG DISCARDABLE  0, 0, 245, 242
+IDD_IMPORT_DIALOG DIALOG DISCARDABLE  0, 0, 455, 234
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Import Tasks"
 FONT 8, "Tahoma"
 BEGIN
     LTEXT           "&Format",IDC_STATIC,7,9,52,8
-    COMBOBOX        IDC_FORMATOPTIONS,62,7,165,125,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_FORMATOPTIONS,63,7,161,125,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Import From",IDC_FROMBORDER,7,28,231,121
+    GROUPBOX        "Import From",IDC_FROMBORDER,7,28,227,176
     CONTROL         "F&ile",IDC_FROMFILE,"Button",BS_AUTORADIOBUTTON | 
-                    WS_GROUP,15,44,45,10
-    EDITTEXT        IDC_FROMFILEPATH,62,42,165,14,ES_AUTOHSCROLL
+                    WS_GROUP,15,44,47,10
+    EDITTEXT        IDC_FROMFILEPATH,63,43,163,14,ES_AUTOHSCROLL
     CONTROL         "&Windows Clipboard",IDC_FROMCLIPBOARD,"Button",
-                    BS_AUTORADIOBUTTON | BS_TOP | BS_MULTILINE,15,61,45,44
-    EDITTEXT        IDC_FROMCLIPBOARDTEXT,62,61,165,62,ES_MULTILINE | 
+                    BS_AUTORADIOBUTTON | BS_TOP | BS_MULTILINE,15,63,151,10
+    EDITTEXT        IDC_FROMCLIPBOARDTEXT,25,77,199,100,ES_MULTILINE | 
                     ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
-    GROUPBOX        "Import To",IDC_TOBORDER,7,155,231,59
-    CONTROL         "&New tasklist",IDC_TONEWTASKLIST,"Button",
-                    BS_AUTORADIOBUTTON | WS_GROUP,15,169,213,10
-    CONTROL         "&Top of active tasklist",IDC_TOACTIVETASLIST,"Button",
-                    BS_AUTORADIOBUTTON,15,183,213,10
-    CONTROL         "&Selected task in active tasklist",IDC_TOSELECTEDTASK,
-                    "Button",BS_AUTORADIOBUTTON,15,197,213,10
-    DEFPUSHBUTTON   "&Import",IDOK,133,221,50,14,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,188,221,50,14
-    PUSHBUTTON      "&Refresh",IDC_REFRESHCLIPBOARD,177,128,50,14
+    PUSHBUTTON      "&Refresh",IDC_REFRESHCLIPBOARD,175,182,50,14
+    GROUPBOX        "Import To",IDC_TOBORDER,244,28,204,176
+    CONTROL         "&New tasklist",IDC_CREATENEWTASKLIST,"Button",
+                    BS_AUTORADIOBUTTON | WS_GROUP,250,42,190,10
+    CONTROL         "&Top of active tasklist",IDC_ADDTOACTIVETASKLIST,"Button",
+                    BS_AUTORADIOBUTTON,250,56,190,10
+    CONTROL         "&Selected task in active tasklist",
+                    IDC_ADDTOSELECTEDTASK,"Button",BS_AUTORADIOBUTTON,250,70,
+                    190,10
+    CONTROL         "",IDC_TODIVIDER,"Static",SS_ETCHEDHORZ,250,86,190,1
+    CONTROL         "&Merge into active tasklist",IDC_MERGETOACTIVETASKLIST,
+                    "Button",BS_AUTORADIOBUTTON,250,93,190,10
+    CONTROL         "Match by task &title",IDC_MERGEBYTITLE,"Button",
+                    BS_AUTORADIOBUTTON | WS_GROUP,260,107,179,10
+    CONTROL         "Match by task &ID",IDC_MERGEBYTASKID,"Button",
+                    BS_AUTORADIOBUTTON,260,121,179,10
+    LTEXT           "(Note: You should only use this option if you are certain that the incoming tasks will have the correct task IDs)",
+                    IDC_MERGEBYTASKIDWARNING,270,135,170,54
+    DEFPUSHBUTTON   "&Import",IDOK,341,213,50,14,WS_GROUP
+    PUSHBUTTON      "Cancel",IDCANCEL,398,213,50,14
 END
 
 IDD_FINDTASKS_DIALOG DIALOG DISCARDABLE  0, 0, 377, 286
@@ -1773,7 +1783,7 @@ BEGIN
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_CLIPBOARDTEXT,7,41,220,82,ES_MULTILINE | 
-                    ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
+                    ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
     DEFPUSHBUTTON   "&Paste",IDOK,123,157,50,14,WS_GROUP
     PUSHBUTTON      "Cancel",IDCANCEL,177,157,50,14
     PUSHBUTTON      "&Refresh",IDC_REFRESH,177,129,50,14
@@ -3724,9 +3734,9 @@ BEGIN
     IDD_IMPORT_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 238
+        RIGHTMARGIN, 448
         TOPMARGIN, 7
-        BOTTOMMARGIN, 235
+        BOTTOMMARGIN, 227
     END
 
     IDD_TASKICON_DIALOG, DIALOG
@@ -5032,7 +5042,7 @@ BEGIN
     IDS_CAD_FILELINK        "File Link"
 END
 
-STRINGTABLE
+STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_TDLBC_LOCK          "Lock"
     IDS_TDCTIP_LOCK         "Locked"
