--- a/BurndownExt/BurndownExt.vcxproj
+++ b/BurndownExt/BurndownExt.vcxproj
@@ -163,6 +163,7 @@ copy unicode_debug\burndownext.dll ..\todolist\unicode_debug /y
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BurndownChart.cpp" />
     <ClCompile Include="BurndownExt.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -190,6 +191,7 @@ copy unicode_debug\burndownext.dll ..\todolist\unicode_debug /y
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BurndownChart.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="BurndownExt.h" />
     <ClInclude Include="BurndownWnd.h" />
@@ -208,4 +210,9 @@ copy unicode_debug\burndownext.dll ..\todolist\unicode_debug /y
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="BurndownExt.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
