--- a/BurndownExt/BurndownExt.vcxproj.filters
+++ b/BurndownExt/BurndownExt.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="StdAfx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BurndownChart.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="BurndownExt.def">
@@ -52,6 +55,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StdAfx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BurndownChart.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
